src/test/deca/context/invalid/Obj/new-type.deca
// Description:
//    Utilisation de new sur un type
//
// Résultat:
//On ne peut déclarer que des classes avec new
//
{
    int n = new int();
}